<resources>
    <string name="app_name">Pratilipi</string>
    <string name="selected_language">hi</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_index">Index</string>
    <string name="action_font">Font</string>

    <string name="title_home">HOME</string>
    <string name="title_categories">CATEGORIES</string>
    <string name="title_shelf">SHELF</string>
    <string name="title_profile">PROFILE</string>
    <string name="title_featured_books">Featured</string>
    <string name="title_new_releases">New Releases</string>
    <string name="title_top_reads">Top Reads</string>
    <string name="view_all">View All</string>
    <string name="top_books">TOP</string>
    <string name="free">FREE</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="title_activity_reader_drawer">ReaderDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">example action</string>

    <string name="choose_language">Choose Language</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>

    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
    <string name="title_activity_detail_page">pratilipi</string>

    <string name="hello_world">Hello world!</string>

    <string name="title_activity_read">pratilipi</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="Search_Website">Search Pratilipi</string>

    <string name="no_connection">Please enable internet to fetch latest contents.</string>
    <string name="no_connection_title">No Internet Connection</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="demo_user">Demo User</string>
    <string name="user_since">User Since 2 months</string>
    <string name="books_in_shelf">50 Books in shelf</string>
    <string name="title_activity_login">Login Page</string>
    <string name="title_activity_register">Register Page</string>
    <string name="e_mail_id_log">E-mail ID</string>
    <string name="add_to_shelf"> ADD TO SHELF </string>

    <string name="popupaction1">Remove</string>
    <string name="remove_from_shelf_dialog">Are you sure you want to remove this book from your shelf ?</string>
    <string name="remove_from_shelf_title">Remove from Shelf ?</string>
    <string name="remove_from_shelf_positive">Yes</string>
    <string name="slideshowtext1">1</string>
    <string name="slideshowtext2">2</string>
    <string name="slideshowtext3">3</string>
    <string name="slideshowtext4">4</string>
    <string name="title_activity_introductory_slide_show">IntroductorySlideShow</string>
    <string name="addasShortcutTitle">Add Shortcut</string>

</resources>
