<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.pratilipi.pratilipi.ProfileFragment"
    android:background="#ffffff">
    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:id="@+id/imageView_profile"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="false"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/demo_user"
                    android:id="@+id/textView_profile"
                    android:layout_gravity="left"
                    android:textSize="22dp"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/user_since"
                    android:id="@+id/textView2_profile"
                    android:layout_gravity="left"
                    android:textSize="15dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/books_in_shelf"
                    android:id="@+id/textView3_profile"
                    android:layout_marginTop="5dp"
                    android:textSize="15dp"
                    android:layout_gravity="left"
                    />
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listView_profile"
            android:layout_marginTop="40dp"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true"/>
    </LinearLayout>

</RelativeLayout>
